Fixed page alignments

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -110,3 +110,15 @@ td.leftSide {
 td.rightSide {
   text-align: right;
 }
+
+.block label { 
+  display: inline-block; 
+  width: 140px; 
+  text-align: right; 
+}
+
+.block input { 
+  display: inline-block; 
+  width: 180px; 
+  text-align: left; 
+}
